--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -18,7 +18,7 @@
 <body>
 <header>
   <nav>
-    <a href="#">Services</a>
+    <a href="services.html">Services</a>
     <a href="#">Product</a>
     <a href="#">Vision</a>
     <a href="#">Features</a>
@@ -30,7 +30,7 @@
 </header>
 
 <section class="getStarted">
-  <section class="column">
+  <section class="left">
     <h1>
       Innovation
       <br/>On<br/>
@@ -38,13 +38,12 @@
     </h1>
     <button>Get Started</button>
   </section>
-
   <img class="roundCode" src="img/header-img.png" alt="Image of a code snippet."><!-- this is the round photo -->
 </section>
 
 <section class="middleContent">
 
-  <section class="column1">
+  <section class="column">
     <section>
       <h3>Features</h3>
       <p>
@@ -68,7 +67,7 @@
 
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 
-  <section class="column2">
+  <section class="column">
     <section>
       <h3>Services</h3>
       <p>
